This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php


Version 344  ??

--Cravings implemented.




Server Fixes

--Fixed family tree server to accept longer last words.

--Fixed bug that caused Eve spawn to jump to the west of a donkeytown homeland.
  Fixes #633.

--New method for putting Eve to west of homelands.  Completely ignore any
  d-town or tutorial homelands, and compute the average location of the rest.
  Place Eve to the west of the furthest-west homeland that is not > 1500 to the
  west of this average.

--forceEveAfterGenerationNumber pushed up to 100 (about 1 new town a day).
  Was 40 (about 1 new town every 9 hours).



Version 342    2020-May-30

NOTE:  must update server first this week.
NOTE:  must disable clearCurseCountsOnStartup after servers restart this week.

--Player character now flips facing direction as mouse moves to left and right.
  Fixes #623

--Object editor page shows current object ID.

--Fixed crash in Animation editor when right-click dragging with empty object.

--I FORGIVE YOU (or I FORGIVE JOHN SMITH) to forgive a personal curse.



Server Fixes

--Server no longer disconnects client when it sends an unknown message type.
  For future protocol updates, this allows client to be updated before server.

--Picking up a 3+ child to nurse them clears their starving emote.  Fixes #626

--CurseDB key format now has comma between emails.  Should have done this a
  long time ago.  Temporary code in place for fall-back to old no-comma key if
  entry for new comma-key not found.

--Eve is pushed to the west of farthest-west active homeland, not including
  d-town homelands.  More chance for her to find an area to settle.  Fixes #624

--Support for diagonal tap-out gradients (sw, ne, etc).

--To prevent build up of stale curse counts, we now gradually iterate through
  curse database (10 iterations per step) and check for stale curse times.